--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,14 @@
 			<artifactId>javafaker</artifactId>
 			<version>1.0.2</version>
 		</dependency>
+		
+	<!-- For Serialization /De-serialization -->	
+	<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
+     <dependency>
+        <groupId>com.fasterxml.jackson.core</groupId>
+        <artifactId>jackson-databind</artifactId>
+        <version>2.19.0</version>
+     </dependency>
 
 
 	</dependencies>
