--- a/pom.xml
+++ b/pom.xml
@@ -93,6 +93,36 @@
         <artifactId>jackson-databind</artifactId>
         <version>2.19.0</version>
      </dependency>
+     
+      <!-- https://mvnrepository.com/artifact/org.apache.poi/poi -->
+       <dependency>
+          <groupId>org.apache.poi</groupId>
+          <artifactId>poi</artifactId>
+          <version>5.2.5</version>
+      </dependency>
+
+      <!-- https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml -->
+      <dependency>
+         <groupId>org.apache.poi</groupId>
+         <artifactId>poi-ooxml</artifactId>
+         <version>5.3.0</version>
+     </dependency>
+     
+      <!-- Log4j2 API -->
+    <dependency>
+        <groupId>org.apache.logging.log4j</groupId>
+        <artifactId>log4j-api</artifactId>
+        <version>2.20.0</version>
+    </dependency>
+
+    <!-- Log4j2 Core -->
+    <dependency>
+        <groupId>org.apache.logging.log4j</groupId>
+        <artifactId>log4j-core</artifactId>
+        <version>2.20.0</version>
+    </dependency>
+     
+      
 
 
 	</dependencies>
